--- a/ferreteria.csproj
+++ b/ferreteria.csproj
@@ -65,8 +65,10 @@
     <Compile Include="AgregarProducto.designer.cs">
       <DependentUpon>AgregarProducto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Carrito.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Declaraciones.cs" />
+    <Compile Include="Factura.cs" />
     <Compile Include="Ferreteria.cs" />
     <Compile Include="FiltrarProductos.cs">
       <SubType>Form</SubType>
